# watchtweet

./: Makefile  README.md  pyproject.toml
tests/: test_watch.py
watchtweet/: main.py
